syntax = "proto3";

package supervisor;

import "github.com/mesanine/gaffer/host/host.proto";
import "github.com/mesanine/gaffer/service/service.proto";

service RPC {
  rpc Status (StatusRequest) returns (StatusResponse) {}
  rpc Restart (RestartRequest) returns (RestartResponse) {}
}


message StatusRequest {
  host.Host host = 1;
}

message StatusResponse {
  repeated service.Service services = 2;
}

message RestartRequest {
  string id = 1;
  host.Host host = 2;
}

message RestartResponse {}
